--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "13.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-flags-select": "^2.2.3",
+    "react-icons": "^5.0.1",
+    "react-select": "^5.8.0",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
