--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-flags-select": "^2.2.3",
     "react-icons": "^5.0.1",
+    "react-multi-carousel": "^2.8.4",
     "react-select": "^5.8.0",
     "sass": "^1.69.7"
   },
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "typescript": "^5"
   }
 }
