--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "classnames": "^2.5.1",
     "next": "13.5",
     "react": "^18",
@@ -16,7 +17,9 @@
     "react-flags-select": "^2.2.3",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
+    "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "redux": "^5.0.1",
     "sass": "^1.69.7"
   },
   "devDependencies": {
