--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.1",
     "redux": "^5.0.1",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
