--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.1",
+    "react-table": "^7.8.0",
     "redux": "^5.0.1",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1"
@@ -29,6 +30,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@types/react-table": "^7.7.19",
     "typescript": "^5"
   }
 }
