--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "next": "13.5",
     "react": "^18",
     "react-dom": "^18",
     "react-flags-select": "^2.2.3",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
